// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[date-set-reminder] On a day when one of the middle reminders is active should drop all old reminders 1`] = `
Array [
  Object {
    "date": 2020-02-23T15:00:00.000Z,
    "headline": "Restmülltag!",
    "text": "",
  },
  Object {
    "date": 2020-03-01T00:00:00.000Z,
    "headline": "",
    "text": "Heute die Wertstofftonne vor die Tür",
  },
]
`;

exports[`[date-set-reminder] On a day when one of the middle reminders is active should give the result when the reminder is active 1`] = `
Object {
  "date": 2020-02-23T15:00:00.000Z,
  "headline": "Restmülltag!",
  "text": "",
}
`;

exports[`[date-set-reminder] When passing invalid inputs it should fail when no content 1`] = `undefined`;

exports[`[date-set-reminder] When passing invalid inputs it should silently ignore when not enough items in row 1`] = `[Function]`;

exports[`[date-set-reminder] When passing invalid inputs it should silently ignore when too many  1`] = `[Function]`;

exports[`[date-set-reminder] When starting the reminder on a specific date should read the correct reminders 1`] = `
Array [
  Object {
    "date": 2020-02-09T00:00:00.000Z,
    "headline": "Restmülltag!",
    "text": "Heute die schwarze Tonne vor die Tür",
  },
  Object {
    "date": 2020-02-16T00:00:00.000Z,
    "headline": "Wertstoff!",
    "text": "Heute die Wertstofftonne vor die Tür",
  },
  Object {
    "date": 2020-02-23T15:00:00.000Z,
    "headline": "Restmülltag!",
    "text": "",
  },
  Object {
    "date": 2020-03-01T00:00:00.000Z,
    "headline": "",
    "text": "Heute die Wertstofftonne vor die Tür",
  },
]
`;
